@@ -26,6 +26,7 @@ bodies or see it as a feature
 -- Waves now generated by re-usable little synthethizer library dubbed
    libsyn123.
 -- Pink noise from libsyn123 added (using code from Phil Burk).
+-- White noise from libsyn123.
 -- Geiger-Mueller counter simulation from libsyn123.
 -- Wave sweep generator from libsyn123.
 - libsyn123:
